--- a/main.html
+++ b/main.html
@@ -8,6 +8,53 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method= "post" >
+		<div>
+		<label for="name" >Name</label>
+		<input type="text" id="name" name="name" required>
+		</div>
+		<br>
+		<div>
+		<label for="email" >Email</label>
+		<input type="email" id="email" name="email" required>
+			</div>
+		<br>
+		<div>
+		<lable for ="gender">Gender</lable>
+		<label for="male">Male</label>
+		<input type ="radio"name="gender"id=male value="male" required>
+		<label for="female">Female</label>
+		<input type ="radio"name="gender"id=female value="female" required>
+	</div>
+		<br>
+		<div>
+			<label for="laptop">Laptop Brands</label>
+			<select id="laptop" name="laptop">
+				<option value="apple">Apple</option>
+				<option value="asus">Asus</option>
+				<option value="hp">HP</option>
+			</select>
+		</div> 
+		<br>
+		<div>
+			<label for="age">Age</label>
+			<input type="text" name="age" id="age" required>
+		</div>
+		<br>
+		<div>
+			<label for="dob">DOB</label>
+			<input type="date" name="dob" id="dob" required>
+		</div>
+		<br>
+		<div>
+			<label for="password">Password</label>
+			<input type="password" name="password" id="password" required>
+		</div>
+		<br>
+		<div>
+			<button type="submit">submit</button>
+		</div>
+		<br>
     <script type="text/javascript" src="./script.js">
 </script>
 
