--- a/main.html
+++ b/main.html
@@ -11,12 +11,12 @@
 	<form method= "post" >
 		<div>
 		<label for="name" >Name</label>
-		<input type="text" id="name" name="name" required>
+		<input type="text" id="#name" name="name" required>
 		</div>
 		<br>
 		<div>
 		<label for="email" >Email</label>
-		<input type="email" id="email" name="email" required>
+		<input type="email" id="#email" name="email" required>
 			</div>
 		<br>
 		<div>
@@ -38,17 +38,17 @@
 		<br>
 		<div>
 			<label for="age">Age</label>
-			<input type="text" name="age" id="age" required>
+			<input type="text" name="age" id="#age" required>
 		</div>
 		<br>
 		<div>
 			<label for="dob">DOB</label>
-			<input type="date" name="dob" id="dob" required>
+			<input type="date" name="dob" id="#dob" required>
 		</div>
 		<br>
 		<div>
 			<label for="password">Password</label>
-			<input type="password" name="password" id="password" required>
+			<input type="password" name="password" id="#password" required>
 		</div>
 		<br>
 		<div>
