--- a/main.html
+++ b/main.html
@@ -55,6 +55,7 @@
 			<button type="submit">submit</button>
 		</div>
 		<br>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
