--- a/main.html
+++ b/main.html
@@ -36,6 +36,11 @@
 			</select>
 		</div> 
 		<br>
+			<div>
+ <label for="portfolio">Portfolio</label>
+ <input type="url" name="portfolio" id="portfolio" placeholder="paste your portfolio link" required>
+	</div>
+		<br>
 		<div>
 			<label for="age">Age</label>
 			<input type="text" name="age" id="#age" required>
